# LineageEvoEval

./: .gitignore  README.md  pyproject.toml
configs/: eval.example.toml
examples/: factors.jsonl
inputs/: lineageevo_latest_experiment_top20.jsonl  lineageevo_overnight_200_top20_valid_ic.jsonl
lineageevo_eval/: __init__.py  __main__.py  cli.py  config.py  dsl.py  engine.py  io.py  metrics.py  qlib_backend.py
lineageevo_eval.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_config.py  test_dsl.py  test_engine.py  test_io.py
