[project]
name = "lineageevo-eval"
version = "0.1.0"
description = "Portable LineageEvo-compatible factor evaluation framework."
requires-python = ">=3.10"
dependencies = [
  "pandas>=1.5",
]

[project.optional-dependencies]
qlib = [
  "pyqlib==0.9.7",
]
test = [
  "pytest>=8,<9",
]

[project.scripts]
lineageevo-eval = "lineageevo_eval.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["lineageevo_eval*"]
